# zen-ai-dev-claude-to-any-router-proxy

./: .env.example  .envrc  .gitignore  LICENSE  README.md  claude-no-proxy  docker-compose.yml  litellm_config.yaml  openrouter_anthropic_server.py  pyproject.toml  start_server.py  test_complex_validation.py  test_debug_tools.py  test_edge_cases.py  test_litellm.py  test_multiturn_conversation.py  test_openrouter_debug.py  test_openrouter_server.py  test_specific_error.py  test_tool_streaming.py  test_validation_fix.py  unset-proxy
configs/: litellm_config.yaml  mcp_servers.yaml
docs/: 00-master-implementation-plan.md  01-README.md  01-project-overview.md  02-api-reference.md  03-architecture.md  04-tool-execution-summary.md  05-production-deployment-guide.md  06-claude-code-cli-testing-plan.md  07-debug-logging.md  07-enhanced-error-handling.md  08-implementation-status.md  09-project-completion-summary.md  10-api-enhancement-phases.md  10-phase6-cleanup-summary.md  11-api-conversion-guide.md  11-comprehensive-refactoring-plan-phase6.md  12-logs-management.md  13-implementation-summary.md  14-troubleshooting-logs-consolidation.md  15-claude-code-openai-models-config.md  16-azure-databricks-guide.md  17-unified-proxy-backend-guide.md  18-litellm-messages-backend-guide.md  18-model-configuration.md  19-litellm-bypass-implementation-plan.md  README.md  claude-code-provider-compatibility-guide.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: README.md  check_debug_logs.py  security-check.sh  (+1 more)
(+969 files in other folders)
