[project]
name = "claude-code-proxy"
version = "0.1.0"
description = "OpenRouter to Anthropic API Server using LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "litellm>=1.40.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "typing-extensions>=4.8.0",
    "instructor>=1.8.3",
    "openai>=1.82.1",
    "httpx>=0.25.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "prefect>=3.4.4",
    "structlog>=25.3.0",
    "pyyaml>=6.0.2",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "colorlog>=6.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "colorlog>=6.7.0",
]
