[project]
name = "claude-code-proxy"
version = "0.1.0"
description = "A simple proxy setup that enables Claude Code to work with various LLM providers using LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.72.6",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
